feat: design system overhaul  zero border-radius, standardized buttons, comprehensive docs
- Enforce 0px border-radius globally via tailwind.config.js overrides
- Add CSS base layer reset: border-radius: 0 !important on buttons/inputs
- Standardize all buttons to unified spec: h-10, px-4 py-2.5, text-sm, font-semibold
- Add comprehensive DESIGN_SYSTEM.md with foundations, tokens, components, governance
- Update dashboard layout: header 72px, sidebar 250px, page bg #F5F6FA
- Add mobile bottom nav, welcome modal, empty states, auth flows
- Clear localStorage on init for clean-slate new user experience

--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tradazone</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>tradazone</title>
+  <script>
+    // Restore URL encoded by 404.html so React Router sees the correct path
+    (function (l) {
+      if (l.search[1] === 'p') {
+        var params = l.search.slice(1).split('&').reduce(function (p, s) {
+          var r = s.split('=');
+          p[decodeURIComponent(r[0])] = decodeURIComponent(r.slice(1).join('=').replace(/~and~/g, '&'));
+          return p;
+        }, {});
+        if (params.p !== undefined) {
+          window.history.replaceState(
+            null, null,
+            l.pathname.split('/').slice(0, -1).join('/') + (params.p || '/') +
+            (params.q ? '?' + params.q : '') + l.hash
+          );
+        }
+      }
+    }(window.location));
+  </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
